Add cache clearing script and enhance logging in beer management components

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,6 +18,17 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    # Force /storage/ requests to go through Laravel (even if file exists)
+    # This ensures our route handler processes the request
+    # Must check if it's NOT a directory first to avoid conflicts
+    RewriteCond %{REQUEST_URI} ^/storage/
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.php [L]
+    
+    # Also handle /storage/ requests even if file exists (override default behavior)
+    RewriteCond %{REQUEST_URI} ^/storage/
+    RewriteRule ^ index.php [L]
+
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
